force-app/main/default/objects/Volunteer__c/fields/CompensationAndExpensesPayed__c.field-meta.xml
<CustomField>
    <fullName>CompensationAndExpensesPayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CompensationAndExpensesPayed</label>
    <type>Checkbox</type>
</CustomField>