force-app/main/default/objects/Volunteer__c/fields/IndividualCompensation__c.field-meta.xml
<CustomField>
    <fullName>IndividualCompensation__c</fullName>
    <label>IndividualCompensation</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>