force-app/main/default/objects/Volunteer__c/fields/IndividualCompensationTotal__c.field-meta.xml
<CustomField>
    <fullName>IndividualCompensationTotal__c</fullName>
    <formula>VolunteerShift__r.DefaultCompensation__c  +  IndividualCompensation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IndividualCompensationTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>