force-app/main/default/objects/Volunteer__c/fields/VolunteerShift__c.field-meta.xml
<CustomField>
    <fullName>VolunteerShift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VolunteerShift</label>
    <referenceTo>VolunteerShift__c</referenceTo>
    <relationshipLabel>Volunteers</relationshipLabel>
    <relationshipName>Volunteers</relationshipName>
    <type>Lookup</type>
</CustomField>